# chainlit-CDP

./: .env.example  .gitignore  .trivyignore.yaml  Dockerfile  README.md  all_code.txt  app.py  build_options.txt  chainlit.md  config-tmobile.yaml  config.example.yaml  config.yaml  data_layer.py  hooks.py  llm.py  main.py  mcp_agent.py  mcp_tools_agents.py  pyproject.toml  requirements.txt  secrets.example.yaml  sonar-project.properties  tools_manager.py  utils.py  vars.py
.chainlit/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: chainlit-cd.yaml  chainlit-ci.yaml  code-quality-security.yaml  markdown-lint.yaml  pr-code-check.yaml  pr-dependencies-check.yaml  pylint.yaml  security-lint.yaml  sonar_nightly_builds.yaml  trivyscan-Docekrfile-deploymentmanifests.yaml  veracode_nightly_builds.yaml
agents/: browser_automation_agent.py  ci_cd_graph.py  observability_agent.py  react_agent.py  supervisor.py  tools.py
chainlit/: .env.example  README.md  app.py  config.yaml  data_layer.py  dev-requirements.txt  dev_requirements.txt  mcp_agent.py  requirements.txt  secrets.example.yaml  utils.py
chroma_db/: chroma.sqlite3
config/: __init__.py  load_config.py
data/: ingest_knowledge.py
helmchart/: Chart.yaml
helmchart/templates/: deployment.yaml
helmcharts/demo-apps/: values.yaml
helmfiles/: chainlit.yaml  chromadb.yaml  dev-chainlit.yaml  dev-chromadb.yaml  mcp-confluence.yaml  mcp-grafana.yaml
helmvalues/: chainlit.yaml  chromadb.yaml  dev-chainlit.yaml  dev-chromadb.yaml  mcp-confluence.yaml  mcp-grafana.yaml
hooks/: action_callbacks.py  auth.py  chat_session.py  data_layer_hooks.py  message_handler.py
invoke_agent/: invoke_agent.py
k8s/: bedrock-llm-configmap.yaml  deployment.yaml  grafana-mcp-deployment.yaml  grafana-mcp-service.yaml  ingress.yaml  service.yaml
k8s-dev/: bedrock-llm-configmap.yaml  deployment.yaml  grafana-mcp-deployment.yaml  grafana-mcp-service.yaml  ingress.yaml  service.yaml
k8s-manifests-dev/: dev-chainlit-secret-provider-class.yaml  dev-chainlit-serviceaccount.yaml  dev-config-secret-provider-class.yaml
k8s-manifests-prod/: prod-chainlit-secret-provider-class.yaml  prod-chainlit-serviceaccount.yaml  prod-config-secret-provider-class.yaml
logs/: conversation_6.txt  conversation_7.txt  conversation_8.txt  conversation_9.txt
mcp_tools/: mcp_tools.py
models/: bedrock.py
public/: disable-newchat-popup.js  reduce_logo_size.css
public/elements/: DocumentListComponent.jsx
rag/: rag_file_manager.py  rag_search.py  update_sidebar.py
rag-files/: alert_details.docx
scripts/: confluence_chroma.py  confluence_fetch.py  s3_chroma.py  s3_github.py  update_aws_credentials.py
src/: app.py  data_layer.py  llm.py
src/.chainlit/: config.toml
src/agents/: __init__.py  base_agent.py  ci_cd_graph.py  cryptowallet_agent.py  default_agent.py  observability_agent.py  pod_restart_agent.py  react_agent.py  react_repo_agent.py  supervisor_agent.py
src/config/: __init__.py  load_config.py
src/hooks/: __init__.py  action_callbacks.py  (+5 more)
streamlit/: README.md  main.py
test/: automation.py  tests.txt
tests/: automation.py  test_utils.py
tools/: __init__.py  docx_tools.py  initialize_tools.py  pdf_tools.py
utils/: __init__.py  config.py  file_formatting.py  generate_chat_title_from_input.py  generate_file_and_send.py  get_log.py  get_username.py  git.py  text.py  usage.py
(+57 files in other folders)
