[project]
name = "ai-observe-assistant"
version = "1.24.0"
description = "AI assistant with agents for Atlassian HelpDesk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit==2.9.6",
    "chromadb==1.5.1",
    "fpdf==1.7.2",
    "GitPython==3.1.44",
    "langchain==1.2.10",
    "langchain-aws==1.3.0",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.15",
    "langchain-google-genai==3.0.0",
    "langchain-mcp-adapters==0.2.1",
    "langchain-anthropic==1.3.4",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.9",
    "markdown2==2.5.3",
    "mermaid-py==0.8.0",
    "mcp==1.12.3",
    "mcp-server-fetch==2025.4.7",
    "pypdf>=6.0.0",
    "PyPDF2==3.0.1",
    "python-docx==1.2.0",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "reportlab==4.4.2",
    "slack-bolt==1.23.0",
    "uv==0.7.19",
    "pandas==2.3.2",
    "matplotlib==3.10.6",
    "google-cloud-speech>=2.33.0",
    "requests==2.32.5",
    "beautifulsoup4==4.13.4",
    "botbuilder-core>=4.17.1",
    "botbuilder-schema>=4.17.1",
    "ruff>=0.12.0",
]
[dependency-groups]
code_check = [
    "bandit==1.8.6",
    "ruff==0.12.0"
]
dev = [
    "black==25.1.0",
]
