[project]
name = "ai-observe-assistant"
version = "1.24.0"
description = "AI assistant with agents for Atlassian HelpDesk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit==2.9.6",
    "chromadb==1.5.1",
    "langchain==1.2.10",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.15",
    "langchain-mcp-adapters==0.2.1",
    "langchain-anthropic==1.3.4",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.9",
    "markdown2==2.5.3",
    "mcp==1.12.3",
    "mcp-server-fetch==2025.4.7",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "reportlab==4.4.2",
    "uv==0.7.19",
    "requests==2.32.5",
    "botbuilder-core>=4.17.1",
    "botbuilder-schema>=4.17.1",
    "ruff>=0.12.0",
]
[dependency-groups]
code_check = [
    "bandit==1.8.6",
    "ruff==0.12.0"
]
dev = [
    "black==25.1.0",
]
